Updated Gulp and SCSS files

--- a/src/Sandbox/client/src/scss/base_imports/_global.scss
+++ b/src/Sandbox/client/src/scss/base_imports/_global.scss
@@ -4,6 +4,7 @@
  * 
  * All global styles goes in here. This file should only contain   
  * <element> selectors, no #id or .class selectors.
+ *
  */
 
 * {
