--- a/src/Sandbox/client/src/scss/base_imports/variable_imports/_layout-variables.scss
+++ b/src/Sandbox/client/src/scss/base_imports/variable_imports/_layout-variables.scss
@@ -9,4 +9,4 @@ $layout-modifier-small: 2.4rem;
 $layout-modifier-large: $layout-modifier-small * 2;
 
 // Padding
-$padding-section: 12rem;
+$layout-section-padding: 12rem;
