--- a/src/Sandbox/client/src/components/directives/fm-newsfeed-directive/fm-newsfeed-style.scss
+++ b/src/Sandbox/client/src/components/directives/fm-newsfeed-directive/fm-newsfeed-style.scss
@@ -29,7 +29,11 @@
       }
 
       .fm-news-content{
-        margin-bottom: $layout-modifier-sm;
+        
+      }
+      
+      .fm-button {
+        margin-top: $layout-modifier-sm;
       }
     }
   }
